# pytest-doctor

./: .gitignore  .releaserc.json  CHANGELOG.md  PYTEST_DOCTOR_COMPLETE.md  README.md  agent_startup_tasks.json  mvp-tasks.json  package-lock.json  package.json  pyproject.toml
.agents/skills/commit/: SKILL.md
.agents/skills/pytest-doctor/: SKILL.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIG.md  DOCUMENTATION_MAP.md  DOCUMENTATION_SUMMARY.md  EDGE_CASES.md  GAP_DETECTION.md  INDEX.md  LLM_AGENTS.md  MIGRATION_TO_MINIMAL_ARCHITECTURE.md  OVERVIEW.md  README.md  RULES.md  SCORING.md
src/pytest_doctor/: __init__.py  __main__.py  agent_output.py  aggregation.py  cli.py  config.py  correlation.py  exceptions.py  git_utils.py  models.py  mutation_analyzer.py  mutation_integrator.py  output.py  parallel.py  scoring.py
src/pytest_doctor/analyzers/: __init__.py  assertion_quality_analyzer.py  code_analyzer.py  coverage_engine.py  edge_case_detector.py  gap_analyzer.py  gap_detector.py  quality_analyzer.py  ruff_analyzer.py  test_analyzer.py  vulture_analyzer.py
src/pytest_doctor/cli/: __init__.py  main.py  parser.py
src/pytest_doctor/reporter/: __init__.py
src/pytest_doctor/scoring/: __init__.py
tests/: __init__.py  conftest.py  integration_test_mutation.py  performance_test.py  test_agent_output.py  test_aggregation.py  test_assertion_quality_analyzer.py  test_cli.py  test_config.py  test_gap_analyzer.py  test_git_utils.py  test_models.py  test_mutation_analyzer.py  test_mutation_integrator.py  test_output.py  test_parallel.py  test_pipeline.py  test_quality_analyzer.py  test_ruff_analyzer.py  test_scoring.py  test_vulture_analyzer.py
tests/fixtures/: sample_mutations.py
tests/fixtures/strong_assertions_example/src/: calculator.py
tests/fixtures/strong_assertions_example/tests/: test_strong_calculator.py
tests/fixtures/weak_assertions_example/src/: calculator.py
tests/fixtures/weak_assertions_example/tests/: test_weak_calculator.py
