[project]
name = "pytest-doctor"
version = "0.1.0"
description = "Analyzes pytest test runs to identify gaps, edge cases, and coverage issues."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "pytest-doctor contributors", email = "contributors@pytest-doctor.dev" }
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
pytest-doctor = "pytest_doctor:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
