[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_doctor"]

[project]
name = "pytest-doctor"
version = "1.0.0"
description = "A CLI tool that diagnoses weak or broken pytest suites and provides a 0-100 health score with actionable recommendations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "pytest-doctor contributors" }]
keywords = ["pytest", "testing", "diagnostics", "linting", "coverage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "vulture>=2.7",
    "pathspec>=0.11.0",
    "tomli>=1.1.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pytest-doctor = "pytest_doctor.cli:main"

[tool.pytest.ini_options]
minversion = "1.0.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers -ra"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: marks tests as slow",
]

[tool.coverage.run]
source = ["src/pytest_doctor"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "1.0.0"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "1.0.0"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "RUF",   # ruff-specific rules
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (black handles this)
    "W505",  # doc line too long (black handles this)
]

[tool.ruff.lint.isort]
known-first-party = ["pytest_doctor"]

[tool.pytest-doctor]
ignore = { rules = [], files = [] }
lint = true
deadCode = true
testAnalysis = true
verbose = false
